fixed and labeled css file; fixes included: -nav bar positioning -alignment -img added -toggle button added and stylized

--- a/style.css
+++ b/style.css
@@ -1,52 +1,92 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     font-family: "IBM Plex Sans", sans-serif;
 }
 
-nav{
+/* nav bar */
+nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 10;
     display: flex;
     padding: 2% 3%;
-    justify-content: space-between;
-    align-items: center;
 }
+
 nav img{
     width: 50px;
     height: 50px;
 }
 
-.content h1{
-    width: 90%;
-    color: black;
-    position: absolute;
-    top: 50%;
-    left: 25%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
-.content h2{
-    width: 90%;
-    color: #707475;
-    position: absolute;
-    top: 54%;
-    left: 25%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-}
-.content p{
-    width: 90%;
-    color: #707475;
-    position: absolute;
-    top: 60%;
-    left: 24.8%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+/* main wrapper for split screen container */
+.main-container {
+    display: flex; 
+    flex-direction: row; 
+    width: 100%;
+    height: 100vh;
+    align-items: center;
 }
 
-.hero_btn{
-    display: inline-block;
-    text-decoration: none;
-    border: 1px solid #707475;
-    padding: 12px 34px;
-    font-size: 16px;
+/* left sect */
+.content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.content h1{
+    font-size: 2.5rem;
+    margin-bottom: 1px;
+}
+.content h2{
+    color: #707475;
+    font-weight: 400;
+    margin-bottom: 20px;
+}
+.content p{
+font-size: 0.9rem;
+    color: #707475;
+    margin-bottom: 20px;
+}
+
+/* right sect */
+.image-container {
+    flex: 1; 
+    height: 100vh;
+    padding: 40px; 
+}
+
+.image-container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+    border-radius: 30px; 
+}
+
+/* toggle button */
+.toggle {
+    display: inline-flex;
+    background: #9999; 
+    border-radius: 30px;
+    padding: 5px;
+}
+
+.toggle button {
+    padding: 10px 25px;
+    font-size: 14px;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    border-radius: 25px;
+    transition: 0.3s;
+}
+
+.toggle button.active {
+    background: #999;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.1);
 }
